# aiig-base

./: .gitignore  README.md  requirements.txt
docs/: architecture.md  libraries_comparison.md  thesis_topic.md
notebooks/: 01_asr_and_speaker_id.ipynb  02_text_and_image_conditioning.ipynb  03_fast_image_generation_and_benchmark.ipynb  04_online_meeting_demo.ipynb
scripts/: grid_search_asr.py  test_batch.py  test_single_file.py
services/asr_service/: main.py
services/image_service/: main.py
services/orchestrator_service/: main.py
services/v2t_service/: __init__.py  pyproject.toml  setup.py
services/v2t_service/src/v2t/: __init__.py  manager.py
services/v2t_service/src/v2t/asr/: __init__.py  whisper_impl.py
services/v2t_service/src/v2t/core/: __init__.py  buffer.py  contract.py  dto.py
services/v2t_service/src/v2t/vad/: __init__.py  silero_impl.py
services/v2t_service/src/v2t_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
